@@ -27,30 +27,30 @@ enum {
     RUN_CLEANUP
 };
 
-/* alpha = .001, .01, .025, .05, .1 */
+/* one-tailed alpha = .005, .025, .05 */
 
-static double rhocrit[18][5] = {                /* n = */
-    { 0.9643, 0.8571, 0.7450, 0.6786, 0.5357 }, /*  7 */
-    { 0.9286, 0.8095, 0.7143, 0.6190, 0.5000 }, /*  8 */
-    { 0.9000, 0.7667, 0.6833, 0.5833, 0.4667 }, /*  9 */
-    { 0.8667, 0.7333, 0.6364, 0.5515, 0.4424 }, /* 10 */
-    { 0.8364, 0.7000, 0.6091, 0.5273, 0.4182 }, /* 11 */
-    { 0.8182, 0.6713, 0.5804, 0.4965, 0.3986 }, /* 12 */
-    { 0.7912, 0.6429, 0.5549, 0.4780, 0.3791 }, /* 13 */
-    { 0.7670, 0.6220, 0.5341, 0.4593, 0.3626 }, /* 14 */
-    { 0.7464, 0.6000, 0.5179, 0.4429, 0.3500 }, /* 15 */
-    { 0.7265, 0.5824, 0.5000, 0.4265, 0.3382 }, /* 16 */
-    { 0.7083, 0.5637, 0.4853, 0.4118, 0.3260 }, /* 17 */
-    { 0.6904, 0.5480, 0.4716, 0.3994, 0.3148 }, /* 18 */
-    { 0.6737, 0.5333, 0.4579, 0.3895, 0.3070 }, /* 19 */
-    { 0.6586, 0.5203, 0.4451, 0.3789, 0.2977 }, /* 20 */
-    { 0.6455, 0.5078, 0.4351, 0.3688, 0.2909 }, /* 21 */
-    { 0.6318, 0.4963, 0.4241, 0.3597, 0.2829 }, /* 22 */
-    { 0.6186, 0.4852, 0.4150, 0.3518, 0.2767 }, /* 23 */
-    { 0.6070, 0.4748, 0.4061, 0.3435, 0.2704 }  /* 24 */
+static double rhocrit[18][3] = { 
+    { 0.8929, 0.7450, 0.6786 }, /*  n = 7 */
+    { 0.8571, 0.7143, 0.6190 }, /*  8 */
+    { 0.8167, 0.6833, 0.5833 }, /*  9 */
+    { 0.7818, 0.6364, 0.5515 }, /* 10 */
+    { 0.7545, 0.6091, 0.5273 }, /* 11 */
+    { 0.7273, 0.5804, 0.4965 }, /* 12 */
+    { 0.6978, 0.5549, 0.4780 }, /* 13 */
+    { 0.6747, 0.5341, 0.4593 }, /* 14 */
+    { 0.6536, 0.5179, 0.4429 }, /* 15 */
+    { 0.6324, 0.5000, 0.4265 }, /* 16 */
+    { 0.6152, 0.4853, 0.4118 }, /* 17 */
+    { 0.5975, 0.4716, 0.3994 }, /* 18 */
+    { 0.5825, 0.4579, 0.3895 }, /* 19 */
+    { 0.5684, 0.4451, 0.3789 }, /* 20 */
+    { 0.5545, 0.4351, 0.3688 }, /* 21 */
+    { 0.5426, 0.4241, 0.3597 }, /* 22 */
+    { 0.5306, 0.4150, 0.3518 }, /* 23 */
+    { 0.5200, 0.4061, 0.3435 }  /* 24 */
 };
 
-/* the upper-tail values above are from Daniel and Terrell,
+/* The values above are from Daniel and Terrell,
    Business Statistics, 4e (Houghton Mifflin, 1986)
 */
 
@@ -64,11 +64,9 @@ static double spearman_signif (double rho, int n)
     
     x = rhocrit[n - 7];
 
-    if (rho > x[0]) return .001;
-    if (rho > x[1]) return .01;
-    if (rho > x[2]) return .025;
-    if (rho > x[3]) return .05;
-    if (rho > x[4]) return .1;
+    if (rho > x[0]) return .01;
+    if (rho > x[1]) return .05;
+    if (rho > x[2]) return .10;
     return 1.0;
 }
 
@@ -237,9 +235,6 @@ static int spearman_rho (const double *x, const double *y, int n,
     return 0;
 }
 
-static int kendall_tau (const double *x, const double *y, int n,
-			PRN *prn);
-
 /**
  * spearman:
  * @list: list of (two) variables to process.
@@ -348,6 +343,8 @@ int spearman (const int *list, const double **Z, const DATAINFO *pdinfo,
 
     return 0;
 }
+
+#if 0
 
 struct xy_pair {
     double x;
@@ -492,6 +489,8 @@ static int kendall_tau (const double *x, const double *y, int n,
 
     return 0;
 }
+
+#endif
 
 #define LOCKE_DEBUG 0
 
