@@ -233,7 +233,7 @@ static int leverage_plot (const MODEL *pmod, gretl_matrix *S,
 
     /* upper plot: leverage factor */
     fputs("set origin 0.0,0.50\n", fp);
-    fputs("set missing '?'\n", fp);
+    gnuplot_missval_string(fp);
     fputs("set yrange [0:1]\n", fp);
     fprintf(fp, "set title '%s'\n", G_("leverage"));
     fputs("plot \\\n'-' using 1:2 w impulses\n", fp);
@@ -259,7 +259,7 @@ static int leverage_plot (const MODEL *pmod, gretl_matrix *S,
 
     /* lower plot: influence factor */
     fputs("set origin 0.0,0.0\n", fp);
-    fputs("set missing '?'\n", fp);
+    gnuplot_missval_string(fp);
     fputs("set yrange [*:*]\n", fp);
     fprintf(fp, "set title '%s'\n", G_("influence")); 
     fputs("plot \\\n'-' using 1:2 w impulses\n", fp);
