@@ -24,6 +24,7 @@ version 1.6.6, in progress
 - Double maximum length to gretl command line to 8192 bytes
 - Gamma p-values: switch to shape/scale parameterization
 - Spearman's rho: fix for case with ties
+- Allow for syntax change re. missing values in gnuplot 4.3
 
 5/17/2007 version 1.6.5
 - Fix new breakage in configuration of user directory
